added footer and shape

--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,4 +1,26 @@
-<div>
-    <h1>Footer</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quibusdam.</p>
-</div>
+<section>
+  <img
+    class="w-[45.094 rem] h-[26.125 rem] mx-auto"
+    src="src/assets/Vector 7.png"
+    alt="etrwtr"
+  />
+  <footer class="mx-9 flex justify-between">
+    <div>
+      <p>Agentur Baumeister</p>
+      <p>Böckhstraße 13</p>
+      <p>10967 Berlin</p>
+    </div>
+    <div>
+      <p>hallo@agentur-baumeister.com</p>
+      <p>+49 (0)30 - 490 827 87</p>
+    </div>
+    <p>LinkedIn</p>
+    <p>Instagram</p>
+    <div>
+      <div>
+        <p>Impressum</p>
+        <p>Datenschutz</p>
+      </div>
+    </div>
+  </footer>
+</section>
