brandig strategy section added

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
         loadComponents('hero', 'src/sections/hero.html');
         loadComponents('contact', 'src/sections/contact.html');
         loadComponents('footer', 'src/sections/footer.html');
+        loadComponents('brandingStrategy', 'src/components/branding-strategy.html');
     }
 </script>
 <body>
     <div id="header"></div>
     <div id="hero"></div>
+    <div id="brandingStrategy"></div>
+
     <div id="contact"></div>
     <div id="footer"></div>
 </body>
