--- a/src/sections/header.html
+++ b/src/sections/header.html
@@ -1,16 +1,16 @@
 <div>
     <header class="md:flex justify-between items-center md:p-6">
         <div class="hidden md:block">
-            <a href="#" class="block">DV</a>
-            <a href="#" class="block">EN</a>
+            <a href="#" class="block font-semibold">DV</a>
+            <a href="#" class="block font-semibold">EN</a>
         </div>
         <a href="#" class="hidden md:block">
             <img src="src/assets/logo.svg" alt="">
         </a>
        <div class="flex justify-between md:hidden pt-16 pb-24 px-6">
             <div>
-                <a href="#" class="block">DV</a>
-                <a href="#" class="block">EN</a>
+                <a href="#" class="block font-semibold">DV</a>
+                <a href="#" class="block font-semibold">EN</a>
             </div>
             <a href="#">
                 <img src="src/assets/logo.svg" alt="">
