fix: Add missing alt value to logo and removed empty spaces from class name

--- a/src/sections/header.html
+++ b/src/sections/header.html
@@ -5,7 +5,7 @@
             <a href="#" class="block font-semibold">EN</a>
         </div>
         <a href="#" class="hidden md:block">
-            <img src="src/assets/logo.svg" alt="">
+            <img src="src/assets/logo.svg" alt="logo">
         </a>
        <div class="flex justify-between md:hidden pt-16 pb-24 px-6">
             <div>
@@ -13,16 +13,16 @@
                 <a href="#" class="block font-semibold">EN</a>
             </div>
             <a href="#">
-                <img src="src/assets/logo.svg" alt="">
+                <img src="src/assets/logo.svg" alt="logo">
             </a>
-            <label for="hamburger-state" class="md:hidden cursor-pointer ">
-                <img id="hamburger_btn" src="src/assets/hamburger.svg" alt="">
-                <img id="hamburger_x_btn" src="src/assets/close-hamburger.svg" class="hidden" alt="">
+            <label for="hamburger-state" class="md:hidden cursor-pointer">
+                <img id="hamburger_btn" src="src/assets/hamburger.svg" alt="hamburger-menu">
+                <img id="hamburger_x_btn" src="src/assets/close-hamburger.svg" class="hidden" alt="hamburger-menu">
             </label>
        </div>
        <input type="checkbox" class="peer hidden" id="hamburger-state">
-        <nav class="peer-checked:max-h-full max-h-0 overflow-hidden  absolute md:max-h-full md:static  left-0 right-0 mx-auto md:my-0 md:mx-0  text-center">
-            <ul class="">
+        <nav class="peer-checked:max-h-full max-h-0 overflow-hidden absolute md:max-h-full md:static left-0 right-0 mx-auto md:my-0 md:mx-0 text-center">
+            <ul>
                 <li class="text-[#00672E] md:text-black font-semibold text-[2rem] md:pb-0 md:text-[1rem] pb-12">About</li>
                 <li class="text-[#00672E] md:text-black font-semibold text-[2rem] md:pb-0 md:text-[1rem] pb-12">Services</li>
                 <li class="text-[#00672E] md:text-black font-semibold text-[2rem] md:pb-0 md:text-[1rem] pb-12">References</li>
