fix: Removed unneeded defer flag from script tag

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <div id="hero"></div>
     <div id="contact"></div>
     <div id="footer"></div>
-    <script defer src="./src/js/main.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 </html>
