adjusted to footer font

--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,4 +1,4 @@
-<section>
+<section class="text-[1.5 rem] font-bold">
   <img
     class="w-[45.094 rem] h-[26.125 rem] mx-auto"
     src="src/assets/Vector 7.png"
@@ -11,7 +11,7 @@
       <p>10967 Berlin</p>
     </div>
     <div>
-      <p>hallo@agentur-baumeister.com</p>
+      <a>hallo@agentur-baumeister.com</a>
       <p>+49 (0)30 - 490 827 87</p>
     </div>
     <p>LinkedIn</p>
