--- a/src/sections/header.html
+++ b/src/sections/header.html
@@ -21,12 +21,20 @@
             </label>
        </div>
        <input type="checkbox" class="peer hidden" id="hamburger-state">
-        <nav class="peer-checked:max-h-full max-h-0 overflow-hidden absolute md:max-h-full md:static left-0 right-0 mx-auto md:my-0 md:mx-0 text-center">
+        <nav id="mobile_nav" class="hidden md:block max-h-full overflow-hidden absolute md:max-h-full md:static left-0 right-0 mx-auto md:my-0 md:mx-0 text-center md:text-left">
             <ul>
-                <li class="text-[#00672E] md:text-black font-semibold text-[2rem] md:pb-0 md:text-[1rem] pb-12">About</li>
-                <li class="text-[#00672E] md:text-black font-semibold text-[2rem] md:pb-0 md:text-[1rem] pb-12">Services</li>
-                <li class="text-[#00672E] md:text-black font-semibold text-[2rem] md:pb-0 md:text-[1rem] pb-12">References</li>
-                <li class="text-[#00672E] md:text-black font-semibold text-[2rem] md:pb-0 md:text-[1rem]">Contact</li>
+                <li class="text-custom-green md:text-black font-semibold text-4xl md:pb-0 md:text-base pb-12">
+                    <a href="#">About</a>
+                </li>
+                <li class="text-custom-green md:text-black font-semibold text-4xl md:pb-0 md:text-base pb-12">
+                    <a href="#">Services</a>
+                </li>
+                <li class="text-custom-green md:text-black font-semibold text-4xl md:pb-0 md:text-base pb-12">
+                    <a href="#">References</a>
+                </li>
+                <li class="text-custom-green md:text-black font-semibold text-4xl md:pb-0 md:text-base">
+                    <a href="#">Contact</a>
+                </li>
             </ul>
         </nav>
     </header>
