--- a/contact.html
+++ b/contact.html
@@ -17,18 +17,16 @@
     }
 
     window.onload = () => {
-        loadComponents('header', 'src/sections/header.html');
-        loadComponents('hero', 'src/sections/hero.html');
+        // loadComponents('header', 'src/sections/header.html');
         loadComponents('contact', 'src/sections/contact.html');
-        loadComponents('footer', 'src/sections/footer.html');
+        // loadComponents('footer', 'src/sections/footer.html');
     }
 </script>
 
 <body>
-    <div id="header"></div>
-    <div id="hero"></div>
+    <!-- <div id="header"></div> -->
     <div id="contact"></div>
-    <div id="footer"></div>
+    <!-- <div id="footer"></div> -->
 </body>
 
 </html>
