added responsivness on lg screen

--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,25 +1,34 @@
-<section class="text-[1.5 rem] font-bold">
+<section class="font-bold text-[1.55 rem]">
   <img
-    class="w-[45.094 rem] h-[26.125 rem] mx-auto"
+    class="w-[30.094rem] h-[10.125rem] m- mx-auto"
     src="src/assets/Vector 7.png"
-    alt="etrwtr"
+    alt="Vector 7"
   />
-  <footer class="mx-9 flex justify-between">
-    <div>
-      <p>Agentur Baumeister</p>
-      <p>Böckhstraße 13</p>
-      <p>10967 Berlin</p>
-    </div>
-    <div>
-      <a>hallo@agentur-baumeister.com</a>
-      <p>+49 (0)30 - 490 827 87</p>
-    </div>
-    <p>LinkedIn</p>
-    <p>Instagram</p>
-    <div>
+  <footer class="mt-20 w-full flex flex-wrap">
+    <div
+      class="flex lg:w-1/2 lg:justify-evenly w-full justify-between mx-9 lg:mx-0"
+    >
       <div>
-        <p>Impressum</p>
-        <p>Datenschutz</p>
+        <p>Agentur Baumeister</p>
+        <p>Böckhstraße 13</p>
+        <p>10967 Berlin</p>
+      </div>
+      <div>
+        <a class="underline" href="hallo@agentur-baumeister.com"
+          >hallo@agentur-baumeister.com</a
+        >
+        <!-- <a >hallo@agentur-baumeister.com</a> -->
+        <p>+49 (0)30 - 490 827 87</p>
+      </div>
+    </div>
+    <div class="flex lg:w-1/2 lg:justify-evenly w-full justify-evenly">
+      <p>LinkedIn</p>
+      <p>Instagram</p>
+      <div>
+        <div class="sm:flex flex-col sm:justify-between w-full">
+          <p>Impressum</p>
+          <p>Datenschutz</p>
+        </div>
       </div>
     </div>
   </footer>
