--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,12 +1,12 @@
 <section class="font-bold text-[1.55 rem]">
   <img
-    class="w-[30.094rem] h-[10.125rem] m- mx-auto"
+    class="lg:w-[26.094rem] lg:h-[15.125rem] md:w-[24.094rem] md:h-[17.125rem] mx-auto"
     src="src/assets/Vector 7.png"
     alt="Vector 7"
   />
   <footer class="mt-20 w-full flex flex-wrap">
     <div
-      class="flex lg:w-1/2 lg:justify-evenly w-full justify-between mx-9 lg:mx-0"
+      class="flex lg:w-1/2 lg:justify-evenly w-full justify-between lg:mx-0 md:px-9"
     >
       <div>
         <p>Agentur Baumeister</p>
@@ -21,11 +21,13 @@
         <p>+49 (0)30 - 490 827 87</p>
       </div>
     </div>
-    <div class="flex lg:w-1/2 lg:justify-evenly w-full justify-evenly">
+    <div
+      class="flex lg:w-1/2 lg:justify-evenly w-full md:justify-between md:px-9"
+    >
       <p>LinkedIn</p>
       <p>Instagram</p>
       <div>
-        <div class="sm:flex flex-col sm:justify-between w-full">
+        <div class="flex lg:flex-col md:justify-evenly gap-x-32 w-full">
           <p>Impressum</p>
           <p>Datenschutz</p>
         </div>
