--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,35 +1,36 @@
 <section class="font-bold text-[1.55 rem]">
   <img
-    class="lg:w-[26.094rem] lg:h-[15.125rem] md:w-[24.094rem] md:h-[17.125rem] mx-auto"
+    class="lg:w-[26.094rem] lg:h-[15.125rem] md:w-[24.094rem] md:h-[12.125rem] mx-auto"
     src="src/assets/Vector 7.png"
     alt="Vector 7"
   />
   <footer class="mt-20 w-full flex flex-wrap">
     <div
-      class="flex lg:w-1/2 lg:justify-evenly w-full justify-between lg:mx-0 md:px-9"
+      class="flex flex-col sm:flex-row lg:w-1/2 lg:justify-evenly w-full justify-between lg:mx-0 md:px-9 gap-5"
     >
       <div>
         <p>Agentur Baumeister</p>
         <p>Böckhstraße 13</p>
         <p>10967 Berlin</p>
       </div>
-      <div>
+      <div class="sm:mb-4">
         <a class="underline" href="hallo@agentur-baumeister.com"
           >hallo@agentur-baumeister.com</a
         >
-        <!-- <a >hallo@agentur-baumeister.com</a> -->
         <p>+49 (0)30 - 490 827 87</p>
       </div>
     </div>
     <div
-      class="flex lg:w-1/2 lg:justify-evenly w-full md:justify-between md:px-9"
+      class="flex lg:w-1/2 lg:justify-around w-full md:justify-between md:px-9"
     >
       <p>LinkedIn</p>
       <p>Instagram</p>
       <div>
-        <div class="flex lg:flex-col md:justify-evenly gap-x-32 w-full">
-          <p>Impressum</p>
-          <p>Datenschutz</p>
+        <div
+          class="flex lg:flex-col lg:gap-x-32 md:justify-between md:space-x-24 w-full sm:w-full"
+        >
+          <p class="">Impressum</p>
+          <p class="">Datenschutz</p>
         </div>
       </div>
     </div>
