--- a/src/sections/contact.html
+++ b/src/sections/contact.html
@@ -1,9 +1,6 @@
 <div class="flex flex-auto mb-8 text-green-800 text-sm  lg:w-[80%] lg:mx-auto lg:justify-center">
-
-    <div id="contacts" class=" flex flex-col gap-8 ml-6">
-
+    <div id="contacts" class=" flex flex-col gap-8 ml-6 px-6 lg:ml-6 lg:w-1/2 md:text-base xl:text-xl">
         <h1>Contact</h1>
-
         <div class="max-w-[30ch]">
             <h3 class="text-[10px] font-medium"> IMPRINT</h3>
             Agentur Baumeister
@@ -29,10 +26,11 @@
 
     </div>
 
-    <div id="Disclaimer" class="flex flex-col mt-6 mr-6 justify-end">
+    <div id="Disclaimer"
+        class="flex flex-col mt-6 mr-6 justify-end px-6 lg:mt-0 lg:w-1/2 lg:mr-6 lg:justify-end  lg:text-right lg:items-end">
 
-        <h2 class="text-right mb-3 text-[11px] font-bold ">DISCLAIMER</h2>
-        <p class="text-[12px] max-w-[35ch] text-left">
+        <h2 class="text-left mb-3 text-[11px] font-bold md:text-base xl:text-xl">DISCLAIMER</h2>
+        <p class="text-[12px] max-w-[35ch] text-right md:text-base xl:text-xl">
             Despite all due care, no liability can be accepted for the accuracy, completeness and up to-dateness of the
             information provided. The same applies to third-party websites to which www.agentur-baumeister.com refers by
             means of hyperlinks. Katrein Baumeister, Agentur Baumeister accepts no liability for the content of these
