done for sm: ,lg: , md screens

--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -4,7 +4,7 @@
     src="src/assets/Vector 7.png"
     alt="Vector 7"
   />
-  <footer class="mt-20 w-full flex flex-wrap">
+  <footer class="mt-20 w-full flex flex-wrap px-2">
     <div
       class="flex flex-col sm:flex-row lg:w-1/2 lg:justify-evenly w-full justify-between lg:mx-0 md:px-9 gap-5"
     >
@@ -21,16 +21,16 @@
       </div>
     </div>
     <div
-      class="flex lg:w-1/2 lg:justify-around w-full md:justify-between md:px-9"
+      class="flex lg:w-1/2 lg:justify-around w-full justify-between md:px-9 flex-wrap"
     >
       <p>LinkedIn</p>
       <p>Instagram</p>
       <div>
         <div
-          class="flex lg:flex-col lg:gap-x-32 md:justify-between md:space-x-24 w-full sm:w-full"
+          class="md:justify-between justify-evenly md:flex-row md:gap-x-12 lg:gap-x-0 lg:flex-col flex lg:space-x-0 w-full gap-x-5"
         >
-          <p class="">Impressum</p>
-          <p class="">Datenschutz</p>
+          <p>Impressum</p>
+          <p>Datenschutz</p>
         </div>
       </div>
     </div>
