made corrections in responsive

--- a/src/sections/contact.html
+++ b/src/sections/contact.html
@@ -29,7 +29,7 @@
     <div id="Disclaimer"
         class="flex flex-col mt-6 mr-6 justify-end px-6 lg:mt-0 lg:w-1/2 lg:mr-6 lg:justify-end  lg:text-right lg:items-end">
 
-        <h2 class="text-left mb-3 text-[11px] font-bold md:text-base xl:text-xl">DISCLAIMER</h2>
+        <h2 class="text-right mb-3 text-[11px] font-bold md:text-base xl:text-xl">DISCLAIMER</h2>
         <p class="text-[12px] max-w-[35ch] text-right md:text-base xl:text-xl">
             Despite all due care, no liability can be accepted for the accuracy, completeness and up to-dateness of the
             information provided. The same applies to third-party websites to which www.agentur-baumeister.com refers by
